<resources>
    <string name="app_name">JournalApp</string>
    <string name="what_are_you_grateful_for_today">What Are You grateful for today?</string>
    <string name="self_gratitude_journal">Self. Gratitude Journal</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="sign_up">Create Account</string>
    <string name="username">Username</string>
    <string name="add_thoughts">Add Thoughts</string>
    <string name="sign_out">Sign out</string>
    <string name="usernamelist">UserName</string>
</resources>
