<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_color"

    android:padding="16dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/loginprogressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        style="?android:attr/progressBarStyleLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/emailedt"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/passedt"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/login"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/createaccbtn"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sign_up"
            android:textStyle="bold"/>


    </LinearLayout>



</LinearLayout>