<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/progressbarAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameedtAccount"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>

        <AutoCompleteTextView
            android:id="@+id/emailedtAccount"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/passedtAccount"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>


        <Button
            android:id="@+id/createaccbtnAccount"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:textSize="16sp"
            android:text="@string/sign_up"
            android:textStyle="bold"/>


    </LinearLayout>



</LinearLayout>